# diesel-rust-learning

./: README.md
diesel/diesel_demo/: .env
diesel/diesel_demo/migrations/2021-11-09-205033_create_posts/: up.sql
diesel/diesel_demo/src/: lib.rs  models.rs  schema.rs
diesel/diesel_events/: .env
diesel/diesel_events/migrations/2021-11-24-052816_create_events/: down.sql
diesel/diesel_events/src/: models.rs
rust/events/: Cargo.toml
rust/events 3.55.51 PM/: Cargo.toml  rocket.toml
rust/events 3.55.51 PM/migrations/2021-11-24-052816_create_events/: up.sql
rust/events 3.55.51 PM/src/: main.rs  models.rs  schema.rs
rust/events/diesel_events/: Cargo.toml
rust/events/diesel_events/src/: lib.rs
rust/events/src/: main.rs
rust/events_restart/: Cargo.toml  Rocket.toml
rust/events_restart/src/: lib.rs  main.rs  models.rs
rust/events_restart/templates/: home.hbs
rust/guessing_game/src/: main.rs
rust/rocket-web/: Cargo.toml
rust/rocket-web/src/: main.rs
