[package]
name = "events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres"]}
serde = { version = "1.0.123", features = ["derive"]}
dotenv = "0.15.0"
rocket_contrib = { version = "0.4.9", default-features = false, features = ["json", "diesel_postgres_pool"] }